fix(shoppable): header flickering in iPhone5

--- a/sass/shoppable_gallery.scss
+++ b/sass/shoppable_gallery.scss
@@ -184,6 +184,10 @@
     margin: auto;
     width: 100%;
     background-color: #f6f7f7;
+    &.yotpo-relative-wrapper {
+      position: relative;
+      top: 52px;
+    }
   }
 
   .yotpo-shoppable-gallery-images-wrapper {
@@ -290,6 +294,10 @@
     .yotpo-shoppable-single-view-container {
       max-width: 768px;
       margin: auto;
+      &.yotpo-relative-wrapper {
+        position: relative;
+        top: 52px;
+      }
       .yotpo-shoppable-title {
         height: 70px;
         position: relative;
